fix: Enable union responses
Remove the `additionalProperties: false` from the unioned schema objects and
explicitly use the response values when returing the CreateServiceResponse.
